--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -114,7 +114,7 @@ CUAHSI Time Series Viewer
 
 {% block scripts %}
 
-<!--<script src="https://code.highcharts.com/modules/boost.js"></script>-->s
+<!--<script src="https://code.highcharts.com/modules/boost.js"></script>-->
 
 
 <!--<script src="http://code.highcharts.com/stock/highstock.js"></script>-->
