--- a/tethysapp/timeseries_viewer/public/css/main.css
+++ b/tethysapp/timeseries_viewer/public/css/main.css
@@ -14,11 +14,9 @@ width:700px;
     font-size:16px;
 }
 #app-content-wrapper{
-	overflow:hidden !important;
+	overflow:inherit !important;
 }
 #inner-app-content {
-    margin-right: 20px;
-	overflow:hidden !important;
 
 }
 
