final changes for deployment

--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -18,7 +18,8 @@ CUAHSI Time Series Viewer
             <div class="modal-body">
                 <div id="welcome-info">
                     <p>
-                        This app should be launched from the HydroClient page on <a href='http://bcc-hiswebclient.azurewebsites.net'>CUAHSI</a>
+                        <!--This app should be launched from the HydroClient page on <a href='http://bcc-hiswebclient.azurewebsites.net'>CUAHSI</a>-->
+                        This app should be launched from the HydroClient page on <a href='http://data.cuahsi.org/'>CUAHSI</a>
                     </p>
                     <ol>
                         <h6>1. Go to the CUAHSI HydroClient page</h6>
@@ -27,7 +28,8 @@ CUAHSI Time Series Viewer
                         <p>Select the time series from the search results</p>
                         <h6>3. Launch the time series viewer</h6>
                         <p>In your workspace, select the time series for visualization, choose Time series viewer, and launch tool.</p>
-                        <a class="btn btn-default" href='http://bcc-hiswebclient.azurewebsites.net'>Go to CUAHSI HydroClient website</a>
+                        <!--<a class="btn btn-default" href='http://bcc-hiswebclient.azurewebsites.net'>Go to CUAHSI HydroClient website</a>-->
+                         <a class="btn btn-default" href='http://data.cuahsi.org/'>Go to CUAHSI HydroClient website</a>
                     </ol>
                 </div>
             </div>
