--- a/tethysapp/timeseries_viewer/public/css/main.css
+++ b/tethysapp/timeseries_viewer/public/css/main.css
@@ -96,9 +96,9 @@ tr.shown td.details-control {
 #example_info{
 	visibility: hidden;
 }
-#example_paginate{
-	visibility: hidden;
-}
+/*#example_paginate{*/
+	/*visibility: hidden;*/
+/*}*/
 
 #loading{
 	/*display: block !important;*/
