--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -80,7 +80,7 @@ CUAHSI Time Series Viewer
 <!--<button class='btn btn-danger' id='reset' >Reset</button>-->
 
 <div id = "stat_div" >
-    <table id="example" class="display" cellspacing="0" width="100%">
+    <table id="data_table" class="display" cellspacing="0" width="100%">
             <thead>
                 <tr>
                     <th></th>
@@ -89,7 +89,7 @@ CUAHSI Time Series Viewer
                     <th>Site Name</th>
                     <th>Variable</th>
                     <th>Variable Unit</th>
-                    <th>Sample Medium</th>
+                    <th>Quality Control</th>
                     <th>Value Count</th>
 
                     <!--<th>Download Data</th>-->
@@ -114,18 +114,9 @@ CUAHSI Time Series Viewer
 </div>
 
 {% endblock %}
-
 {% block app_actions %}
 {% endblock %}
-
 {% block scripts %}
-
-<!--<script src="https://code.highcharts.com/modules/boost.js"></script>-->
-
-
-<!--<script src="http://code.highcharts.com/stock/highstock.js"></script>-->
-
-
 <script src="/static/tethys_gizmos/vendor/highcharts/js/highcharts.js"></script>
 <script src="/static/tethys_gizmos/vendor/highcharts/js/highcharts-more.js"></script>
 <script src="/static/tethys_gizmos/vendor/highcharts/js/modules/exporting.js"></script>
@@ -134,13 +125,6 @@ CUAHSI Time Series Viewer
 <script src="{% static 'timeseries_viewer/js/canvasjs.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'timeseries_viewer/js/jquery.canvasjs.min.js' %}" type="text/javascript"></script>
 <script src="https://cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js"></script>
-
-
-
-
-
-<!--<script src = "https://code.jquery.com/jquery-1.12.0.min.js"></script>-->
-  {{ block.super }}
-
+{{ block.super }}
 {% endblock %}
 
