Updated viewer to allow new parameters to be used

--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -112,8 +112,8 @@ CUAHSI Time Series Viewer
         <div class="cssload-dot"></div>
     </div>
 </div>
-<!--<div id ="cuahsi_data"  style="display:none">-->
-<div id ="cuahsi_data"  >
+<div id ="cuahsi_data"  style="display:none">
+<!--<div id ="cuahsi_data"  >-->
     <button type="button" class="btn btn-default" id="btn_submit_cuahsi"onClick ="launchByuHydroshareApp()" >submit</button>
 
     <div id="source">{{source}}</div>
