Cleaned up code and improved method to display chart when all time series are loaded

--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -44,7 +44,7 @@ CUAHSI Time Series Viewer
     </div>
 </div>
 <!-- End Modal -->
-<div class="modal fade" id="hello" role="dialog">
+<div class="modal fade" id="unit_selector" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -52,7 +52,7 @@ CUAHSI Time Series Viewer
                 <h4 class="modal-title">This application only displays two different units types at a time.</h4>
             </div>
             <div class="modal-body">
-                <div id="hello2">
+                <div id="unit_selector_info">
 
                 </div>
             </div>
