--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -137,6 +137,9 @@ CUAHSI Time Series Viewer
 <script src="{% static 'timeseries_viewer/js/canvasjs.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'timeseries_viewer/js/jquery.canvasjs.min.js' %}" type="text/javascript"></script>
 <script src="https://cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js"></script>
+
+<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 {{ block.super }}
 {% endblock %}
 
