--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -81,6 +81,7 @@ CUAHSI Time Series Viewer
 <!--<button class='btn btn-danger' id='reset' >Reset</button>-->
 
 <div id = "stat_div" >
+    <!--<div>*All times are displayed in local time</div>-->
     <table id="data_table" class="display" cellspacing="0" width="100%">
         <thead>
         <tr>
