--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -98,8 +98,9 @@ CUAHSI Time Series Viewer
         </tr>
         </thead>
     </table>
+    <div id = 'multiple_units'></div>
 </div>
-<div id = 'multiple_units'></div>
+
 
 
 <div id = loading>
@@ -113,18 +114,18 @@ CUAHSI Time Series Viewer
         <div class="cssload-dot"></div>
     </div>
 </div>
-<div id ="cuahsi_data"  style="display:none">
-<!--<div id ="cuahsi_data"  >-->
-    <button type="button" class="btn btn-default" id="btn_submit_cuahsi"onClick ="launchByuHydroshareApp()" >submit</button>
+<!--<div id ="cuahsi_data"  style="display:none">-->
+<!--&lt;!&ndash;<div id ="cuahsi_data"  >&ndash;&gt;-->
+    <!--<button type="button" class="btn btn-default" id="btn_submit_cuahsi"onClick ="launchByuHydroshareApp()" >submit</button>-->
 
-    <div id="source">{{source}}</div>
-    <div id="cuahsi_ids">{{cuahsi_ids}}</div>
-    <div id ="quality">{{quality}}</div>
-    <div id="method">{{method}}</div>
-    <div id="sourceid">{{sourceid}}</div>
+    <!--<div id="source">{{source}}</div>-->
+    <!--<div id="cuahsi_ids">{{cuahsi_ids}}</div>-->
+    <!--<div id ="quality">{{quality}}</div>-->
+    <!--<div id="method">{{method}}</div>-->
+    <!--<div id="sourceid">{{sourceid}}</div>-->
 
 
-</div>
+<!--</div>-->
 
 {% endblock %}
 {% block app_actions %}
