--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -84,9 +84,9 @@ CUAHSI Time Series Viewer
 <!--<button class='btn btn-danger' id='reset' >Reset</button>-->
 
 <div id = "stat_div" >
-    <button type="button" class="btn btn-info "  data-toggle="modal" data-target="#help-modal" style="float: right; position:relative">
-        <span id = 'get_data_span' data-toggle="tooltip" data-placement="bottom" title = "Get Data for New Selection" class="glyphicon glyphicon-question-sign"></span>
-    </button>
+    <!--<button type="button" class="btn btn-info "  data-toggle="modal" data-target="#help-modal" style="float: right; position:relative">-->
+        <!--<span id = 'get_data_span' data-toggle="tooltip" data-placement="bottom" title = "Get Data for New Selection" class="glyphicon glyphicon-question-sign"></span>-->
+    <!--</button>-->
     <!--<div>*All times are displayed in local time</div>-->
     <table id="data_table" class="display" cellspacing="0" width="100%">
         <thead>
