Improved error logging and view counter

--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -119,7 +119,12 @@ CUAHSI Time Series Viewer
         <div class="cssload-dot"></div>
     </div>
 </div>
-
+<!--{% if request.user.is_superuser %}-->
+    <!--...-->
+    <!--<button>...</button>-->
+    <!--...-->
+<!--{% else %}-->
+<!--{%endif%}-->
 
 {% endblock %}
 {% block app_actions %}
