--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -64,6 +64,56 @@ CUAHSI Time Series Viewer
         </div>
     </div>
 </div>
+
+<!-- Add HS Resource Modal -->
+    <div id="modalLoadRes" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Add HydroShare Resource</h4>
+                </div>
+                <div class="modal-body">
+                    <img src="/static/hydroshare_gis/images/loading-animation.gif">
+                    <br>
+                    <p><b>Loading resource list...</b></p>
+
+                     <table id="hs_resource_table" class="display" cellspacing="0" width="100%">
+                        <thead>
+                        <tr>
+                            <!--<th></th>-->
+                            <th></th>
+                            <th>Title</th>
+                            <th>Type</th>
+                            <th>Author</th>
+                            <th>Last Updated</th>
+                            <!--<th>Download Data</th>-->
+                        </tr>
+                        </thead>
+                        <tfoot><tr>
+
+                            <th></th>
+                            <th>Title</th>
+                            <th>Type</th>
+                            <th>Author</th>
+                            <th>Last Updated</th>
+                            <!--<th>Download Data</th>-->
+                        </tr></tfoot>
+                    </table>
+
+                </div>
+                <div class="modal-footer">
+                    <div class="button-group flex1-0">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" id="btn-upload-res" class="btn btn-success btn-upload" onClick = "get_hs_res()" >Add</button>
+                    </div>
+                </div>
+            </div>
+            <!--End modal content-->
+        </div>
+    </div>
+    <!--End modal-->
 {{block.super}}
 
 {% endblock %}
@@ -84,14 +134,32 @@ CUAHSI Time Series Viewer
 <!--<button class='btn btn-danger' id='reset' >Reset</button>-->
 
 <div id = "stat_div" >
-    <!--<button type="button" class="btn btn-info "  data-toggle="modal" data-target="#help-modal" style="float: right; position:relative">-->
-        <!--<span id = 'get_data_span' data-toggle="tooltip" data-placement="bottom" title = "Get Data for New Selection" class="glyphicon glyphicon-question-sign"></span>-->
-    <!--</button>-->
+    <button type="button" class="btn btn-info "  data-toggle="modal" data-target="#help-modal" style="float: right; position:relative">
+        <span id = 'get_data_span' data-toggle="tooltip" data-placement="bottom" title = "Get Data for New Selection" class="glyphicon glyphicon-question-sign"></span>
+    </button>
+     <button type="button" class="btn btn-info "  data-toggle="modal" data-target="#modalLoadRes" style="float: left; position:relative" onClick = "get_list_hs_res()">
+        <span id = 'get_hs_resource' data-toggle="tooltip" data-placement="bottom" title = "Get Data for New Selection" class="glyphicon glyphicon-question-sign"></span>
+    </button>
     <!--<div>*All times are displayed in local time</div>-->
+
     <table id="data_table" class="display" cellspacing="0" width="100%">
         <thead>
         <tr>
+            <th> <div style='text-align:center'><input class = 'checkbox' id ='master_chk' name ='master_chk' data-resid =" + res_id
+                    + " type='checkbox' onClick ='series_visiblity_toggle(this.id,this.name);'checked = 'checked'></div></th>
+            <!--<th></th>-->
             <th></th>
+            <th>Organization</th>
+            <th>Site Name</th>
+            <th>Variable</th>
+            <th>Variable Unit</th>
+            <th>Quality Control</th>
+            <th>Value Count</th>
+            <!--<th>Download Data</th>-->
+        </tr>
+        </thead>
+        <tfoot><tr>
+            <th> </th>
             <th></th>
             <th>Organization</th>
             <th>Site Name</th>
@@ -101,8 +169,7 @@ CUAHSI Time Series Viewer
             <th>Value Count</th>
 
             <!--<th>Download Data</th>-->
-        </tr>
-        </thead>
+        </tr></tfoot>
     </table>
     <div id = 'multiple_units'></div>
 </div>
@@ -134,15 +201,15 @@ CUAHSI Time Series Viewer
 <script src="/static/tethys_gizmos/vendor/highcharts/js/highcharts-more.js"></script>
 <script src="/static/tethys_gizmos/vendor/highcharts/js/modules/exporting.js"></script>
 
-<link href = 'https://cdn.datatables.net/1.10.10/css/jquery.dataTables.min.css' rel ='stylesheet'>
 <script src="{% static 'timeseries_viewer/js/main.js' %}"></script>
 
 <script src="{% static 'timeseries_viewer/js/canvasjs.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'timeseries_viewer/js/jquery.canvasjs.min.js' %}" type="text/javascript"></script>
 
 <script src="https://cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js"></script>
-
+<link href = 'https://cdn.datatables.net/1.10.10/css/jquery.dataTables.min.css' rel ='stylesheet'>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.js"></script>
+<script src="https://cdn.datatables.net/plug-ins/1.10.16/api/column().title().js"></script>
 
 <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
 <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
