--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -85,6 +85,7 @@ CUAHSI Time Series Viewer
                             <div class="cssload-dot"></div>
                         </div>
                     </div>
+                    <div id="map" class="map"></div>
 
                      <table id="hs_resource_table" class="display" cellspacing="0" width="100%">
                         <thead>
@@ -120,7 +121,7 @@ CUAHSI Time Series Viewer
             <!--End modal content-->
         </div>
     </div>
-    <!--End modal-->
+<!--End modal-->
 {{block.super}}
 
 {% endblock %}
@@ -130,7 +131,7 @@ CUAHSI Time Series Viewer
 <!--
 <!--<div id = chart_cont>-->
 <!--<div id ='chartDiv'></div>-->
-<!--</div>-->
+
 <div id="error-message"></div>
 <!--<div id="ts-chart" class="highcharts-plot"></div>-->
 <div id = 'chart' style='height:600px;width:100% '>
@@ -139,21 +140,18 @@ CUAHSI Time Series Viewer
 
 
 <!--<button class='btn btn-danger' id='reset' >Reset</button>-->
-
 <div id = "stat_div" >
-    <!--<button type="button" class="btn btn-info "  data-toggle="modal" data-target="#help-modal" style="float: right; position:relative">-->
-        <!--<span id = 'get_data_span' data-toggle="tooltip" data-placement="bottom" title = "Get Data for New Selection" class="glyphicon glyphicon-question-sign"></span>-->
-    <!--</button>-->
-    <button type="button" class="btn btn-success "  data-toggle="modal" data-target="#modalLoadRes" style="float: left; position:relative" onClick = "get_list_hs_res()">
-        <div>
 
-        </div>
-    <!--<span id = 'get_hs_resource' data-toggle="tooltip" data-placement="bottom" title = "Add a HydroShare Resource" class="glyphicon glyphicon-question-sign">Import from <img id = "hs_logo" src="{% static 'timeseries_viewer/images/hydroshare.png' %}"/></span>-->
-    <!--<span id = 'get_hs_resource' data-toggle="tooltip" data-placement="bottom" title = "Add a HydroShare Resource"><img id = "hs_logo" src="{% static 'timeseries_viewer/images/hydroshare.png' %}"/></span>-->
-    <span id = 'get_hs_resource' data-toggle="tooltip" data-placement="bottom" title = "Add a HydroShare Resource" >Add HydroShare Resource</span>
+    <button type="button" class="btn btn-info "  data-toggle="modal" data-target="#modalLoadRes" style="float: left; position:relative" onClick = "get_list_hs_res()">
+        <span id = 'get_hs_resource' data-toggle="tooltip" data-placement="bottom" title = "Add a HydroShare Resource" >Add HydroShare Resource</span>
     </button>
-
-
+    <button id = 'screenshot' type="button" class="btn btn-info "  data-toggle="modal"  style="float: left; position:relative" onClick = "get_screenshot()">
+        <span id = 'download_screenshot' data-toggle="tooltip" data-placement="bottom"  >Download as PNG</span>
+    </button>
+    <button type="button" class="btn btn-info "  data-toggle="modal" data-target="#help-modal" style="float: left; position:relative">
+        <span id = 'get_data_span' data-toggle="tooltip" data-placement="bottom" title = "Get Data for New Selection" class="glyphicon glyphicon-question-sign"></span>
+    </button>
+    <a id="download" style="display:none">Download as image</a>
     <!--<div>*All times are displayed in local time</div>-->
     <table id="data_table" class="display" cellspacing="0" width="100%" style="">
         <thead>
@@ -188,7 +186,7 @@ CUAHSI Time Series Viewer
 </div>
 
 
-
+<div id = print_div style="display:none"></div>
 <div id = loading>
     <div class="cssload-loader">
         <div class="cssload-dot"></div>
@@ -219,12 +217,22 @@ CUAHSI Time Series Viewer
 <script src="{% static 'timeseries_viewer/js/jquery.canvasjs.min.js' %}" type="text/javascript"></script>
 
 <script src="https://cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/buttons/1.4.2/js/dataTables.buttons.min.js"></script>
+<script src="https://cdn.datatables.net/buttons/1.4.2/js/buttons.print.min.js"></script>
 <link href = 'https://cdn.datatables.net/1.10.10/css/jquery.dataTables.min.css' rel ='stylesheet'>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.js"></script>
 <script src="https://cdn.datatables.net/plug-ins/1.10.16/api/column().title().js"></script>
 
 <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
 <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
+
+<script src="https://openlayers.org/en/v4.5.0/build/ol.js" type="text/javascript"></script>
+<link rel="stylesheet" href="https://openlayers.org/en/v4.5.0/css/ol.css" type="text/css">
+
+<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">-->
 {{ block.super }}
 {% endblock %}
 
