Testing viewer for deployment

--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -190,9 +190,9 @@ CUAHSI Time Series Viewer
         <!--<span id = 'map_span' data-toggle="tooltip" data-placement="bottom"  >Display map in model</span>-->
     <!--</button>-->
 
-    <button type="button" class="btn btn-info "  data-toggle="modal" data-target="#help-modal" style="float: left; position:relative">
-        <span id = 'get_data_span' data-toggle="tooltip" data-placement="bottom" title = "Get Data for New Selection" class="glyphicon glyphicon-question-sign"></span>
-    </button>
+    <!--<button type="button" class="btn btn-info "  data-toggle="modal" data-target="#help-modal" style="float: left; position:relative">-->
+        <!--<span id = 'get_data_span' data-toggle="tooltip" data-placement="bottom" title = "Get Data for New Selection" class="glyphicon glyphicon-question-sign"></span>-->
+    <!--</button>-->
     <a id="download" style="display:none">Download as image</a>
     <!--<div>*All times are displayed in local time</div>-->
     <table id="data_table" class="display" cellspacing="0" width="100%" style="">
