Updated api to work with hs-apps.hydroshare. Also added recession analyzer to api list

--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -27,8 +27,8 @@ CUAHSI Time Series Viewer
                         <p>Use the map to search for the site of interest</p>
                         <h6>2. Select time series</h6>
                         <p>Select the time series from the search results</p>
-                        <h6>3. Launch the time series viewer</h6>
-                        <p>In your workspace, select the time series for visualization, choose Time series viewer, and launch tool.</p>
+                        <h6>3. Launch the Data Series Viewer</h6>
+                        <p>In your workspace, select the time series for visualization, choose Date Series Viewer, and launch tool.</p>
                         <!--<a class="btn btn-default" href='http://bcc-hiswebclient.azurewebsites.net'>Go to CUAHSI HydroClient website</a>-->
                         <a class="btn btn-default" href='http://data.cuahsi.org/'>Go to CUAHSI HydroClient website</a>
                     </ol>
@@ -220,7 +220,6 @@ CUAHSI Time Series Viewer
             <th>Variable Unit</th>
             <th>Quality Control</th>
             <th>Value Count</th>
-
             <!--<th>Download Data</th>-->
         </tr></tfoot>
     </table>
