Minor bug fixes

--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -179,9 +179,9 @@ CUAHSI Time Series Viewer
 <div id = "stat_div" >
     <!--This button is for adding hydroshare resources-->
 
-    <!--<button type="button" class="btn btn-info "  data-toggle="modal" data-target="#modalLoadRes" style="float: left; position:relative" onClick = "get_list_hs_res()">-->
-        <!--<span id = 'get_hs_resource' data-toggle="tooltip" data-placement="bottom" title = "Add a HydroShare Resource" >Add HydroShare Resource</span>-->
-    <!--</button>-->
+    <button type="button" class="btn btn-info "  data-toggle="modal" data-target="#modalLoadRes" style="float: left; position:relative" onClick = "get_list_hs_res()">
+        <span id = 'get_hs_resource' data-toggle="tooltip" data-placement="bottom" title = "Add a HydroShare Resource" >Add HydroShare Resource</span>
+    </button>
     <button id = 'screenshot' type="button" class="btn btn-info "  data-toggle="modal"  style="float: left; position:relative" onClick = "get_screenshot()">
         <span id = 'download_screenshot' data-toggle="tooltip" data-placement="bottom"  >Download as PNG</span>
     </button>
